# scripts

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: docker-openai-usage.yaml  publish-kdbg.yaml  publish-openai-usage.yaml
docker-kubernetes/: LICENSE.md  README.md  docker-kube.sh
kdbg/: README.md  pyproject.toml
kdbg/src/kdbg/: cli.py  completion.py  k8s.py
ks/: README.md  cli.py  ks.py  pyproject.toml
ks/k8s/: __init__.py
ks/src/kdbg/: __init__.py
ks/src/ks/: __init__.py  cli.py  completion.py  helpers.py
ks/src/ks/helpers/: __init__.py
openai-usage/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
openai-usage/src/: api_usage.py
openai-usage/src/openai_usage/: __init__.py  __main__.py  api.py  cli.py  display.py  pricing.py
openai-usage/tests/: test_group_by_month.py
proxmox/: README.md
proxmox/migration-watcher/: README.md  pyproject.toml  watcher.py
proxmox/restore-watcher/: README.md  pyproject.toml  restore_watcher.py
proxmox/restore-watcher/tests/: test_log_resolution.py  test_metrics.py  test_progress_parsing.py  test_status_detection.py  test_task_detection.py
slideshow/: README.md  pyproject.toml
slideshow/src/slideshow/: __init__.py  __main__.py  app.py  cli.py  config.py  controls.py  display.py  exif_utils.py  favorites.py  hud.py  image_loader.py  yoink.py
slideshow/src/slideshow/exceptions/: __init__.py  slideshow_errors.py
slideshow/src/slideshow/gui/: __init__.py
slideshow/src/slideshow/models/: __init__.py
slideshow/src/slideshow/services/: __init__.py
slideshow/src/slideshow/utils/: __init__.py
slideshow/tests/: conftest.py  test_app.py  test_cli.py  test_controls_extra.py  test_display.py  test_image_loader.py  test_main.py
transfer.sh/: README.md  transfer.sh
