# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = "." # Specifies that setuptools should look for setup.py or setup.cfg if needed.

[project]
name = "ks-debug-helper"
version = "0.1.0" # You can increment this version
description = "A helper script to launch a debug container targeting a specific application container within a Kubernetes pod."
readme = "README.md" # You will need to create this file
authors = [
    {name = "obeone", email = "obeone@obeone.org"},
]
license = {text = "MIT"} # Or for example: {file = "LICENSE.txt"} if you have a license file

requires-python = ">=3.8"

dependencies = [
    "kubernetes",      # For interaction with the K8s API
    "coloredlogs",     # For colored console logging
    "iterfzf",         # fzf python
    # External dependencies like kubectl and fzf are not listed here,
    # as they are not Python packages. They must be available in the system's PATH.
]

classifiers = [
    "Development Status :: 4 - Beta", # Or as appropriate for your project stage
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Clustering",
    "Topic :: Utilities",
]

keywords = ["kubernetes", "k8s", "debug", "cli", "troubleshooting", "devops", "helper"]

# This section is crucial for `pip install` to create an executable script
# that `pipx` can also use.
[project.scripts]
# 'ks' will be the command name available in the PATH after installation.
# This assumes your script file is named ks.py and contains a main() function.
ks = "ks:main"

# Optional: Project URLs (e.g., if you host it on GitHub)
# [project.urls]
# "Homepage" = "https://github.com/obeone/ks-debug-helper"
# "Bug Tracker" = "https://github.com/obeone/ks-debug-helper/issues"
# "Repository" = "https://github.com/obeone/ks-debug-helper.git"
