# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kdbg"
version = "0.4.0"
description = "Interactive CLI to launch privileged debug containers against running Kubernetes pods."
readme = "README.md"
authors = [
    {name = "obeone", email = "obeone@obeone.org"},
]
license = {text = "MIT"}

requires-python = ">=3.8"

dependencies = [
    "kubernetes",      # For interaction with the K8s API
    "coloredlogs",     # For colored console logging
    "iterfzf",         # fzf python
    # External dependencies like kubectl and fzf are not listed here,
    # as they are not Python packages. They must be available in the system's PATH.
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Clustering",
    "Topic :: Utilities",
]

keywords = ["kubernetes", "k8s", "debug", "cli", "troubleshooting", "devops", "helper"]

[project.scripts]
kdbg = "kdbg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["kdbg"]

[project.urls]
"Homepage" = "https://github.com/obeone/scripts/tree/main/kdbg"
"Bug Tracker" = "https://github.com/obeone/scripts/issues"
"Repository" = "https://github.com/obeone/scripts"
