[project]
name = "openai-usage"
version = "0.2.2"
description = "Console OpenAI API cost and token usage analysis by key and model"
authors = [
    { name="Grégoire Compagnon (obeone)", email="obeone@obeone.org" },
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "prettytable",
    "termcolor"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
openai-usage = "api_usage:main"
