[project]
name = "openai-usage"
version = "0.3.0"
description = "Console OpenAI API cost and token usage analysis by key and model"
authors = [
    { name="Grégoire Compagnon (obeone)", email="obeone@obeone.org" },
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "prettytable",
    "termcolor"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openai-usage = "openai_usage.cli:main"
