[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxmox-restore-watcher"
version = "0.1.0"
description = "CLI scaffold to monitor Proxmox restore task progress."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
pve-restore-watcher = "restore_watcher:main"

[tool.setuptools]
py-modules = ["restore_watcher"]
